--- a/SecurityEditor/SecurityEditor.csproj
+++ b/SecurityEditor/SecurityEditor.csproj
@@ -1,7 +1,51 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <Description>.NET library for managing User Rights Assignment on Windows systems. It replicates the functionality of secpol.exe</Description>
+    <AssemblyName>SecurityEditor</AssemblyName>
+    <AssemblyTitle>SecurityEditor</AssemblyTitle>
+
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net45;net46;net472;net48;net5.0;net6.0</TargetFrameworks>
+
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Company>Evotec</Company>
+    <Authors>Przemyslaw Klys</Authors>
+
+    <PackageId>SecurityEditor</PackageId>
+    <PackageTags>net45;net46;net472;net48;net50;netstandard;netstandard2.0,netstandard2.1</PackageTags>
+    <PackageProjectUrl>https://github.com/evotecit/SecurityEditor</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/evotecit/SecurityEditor/blob/master/License.md</PackageLicenseUrl>
+    <DelaySign>False</DelaySign>
+    <IsPublishable>True</IsPublishable>
+    <Copyright>(c) 2011 - 2022 Przemyslaw Klys @ Evotec. All rights reserved.</Copyright>
+
+    <RepositoryUrl>https://github.com/evotecit/SecurityEditor</RepositoryUrl>
+    <DebugType>portable</DebugType>
+    <!--
+      Turns off reference assembly generation
+      See: https://docs.microsoft.com/en-us/dotnet/standard/assembly/reference-assemblies
+    -->
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+
+    <PackageReadmeFile>README.MD</PackageReadmeFile>
+    <RepositoryType>git</RepositoryType>
+    <SignAssembly>False</SignAssembly>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net6.0|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\Assets\README.MD">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
