--- a/LocalSecurityEditor/LocalSecurityEditor.csproj
+++ b/LocalSecurityEditor/LocalSecurityEditor.csproj
@@ -1,94 +1,94 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <Description>.NET library for managing User Rights Assignment on Windows systems. It replicates the functionality of secedit.exe</Description>
-    <AssemblyName>LocalSecurityEditor</AssemblyName>
-    <AssemblyTitle>LocalSecurityEditor</AssemblyTitle>
-    <VersionPrefix>0.3.0</VersionPrefix>
+	<PropertyGroup>
+		<Description>.NET library for managing User Rights Assignment on Windows systems. It replicates the functionality of secedit.exe</Description>
+		<AssemblyName>LocalSecurityEditor</AssemblyName>
+		<AssemblyTitle>LocalSecurityEditor</AssemblyTitle>
+		<VersionPrefix>0.3.0</VersionPrefix>
 
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net452;net46;net472;net48;net5.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netstandard2.1;net452;net46;net472;net48;net6.0;net7.0;net8.0</TargetFrameworks>
 
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Company>Evotec</Company>
-    <Authors>Przemyslaw Klys</Authors>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Company>Evotec</Company>
+		<Authors>Przemyslaw Klys</Authors>
 
-    <PackageId>LocalSecurityEditor</PackageId>
-    <PackageTags>net45;net46;net472;net48;net50;netstandard;netstandard2.0,netstandard2.1</PackageTags>
-    <PackageProjectUrl>https://github.com/evotecit/LocalSecurityEditor</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/evotecit/LocalSecurityEditor/blob/master/License.md</PackageLicenseUrl>
-    <DelaySign>False</DelaySign>
-    <IsPublishable>True</IsPublishable>
-    <Copyright>(c) 2011 - 2022 Przemyslaw Klys @ Evotec. All rights reserved.</Copyright>
+		<PackageId>LocalSecurityEditor</PackageId>
+		<PackageTags>net45;net46;net472;net48;net50;netstandard;netstandard2.0,netstandard2.1</PackageTags>
+		<PackageProjectUrl>https://github.com/evotecit/LocalSecurityEditor</PackageProjectUrl>
+		<PackageLicenseUrl>https://github.com/evotecit/LocalSecurityEditor/blob/master/License.md</PackageLicenseUrl>
+		<DelaySign>False</DelaySign>
+		<IsPublishable>True</IsPublishable>
+		<Copyright>(c) 2011 - 2022 Przemyslaw Klys @ Evotec. All rights reserved.</Copyright>
 
-    <RepositoryUrl>https://github.com/evotecit/LocalSecurityEditor</RepositoryUrl>
-    <DebugType>portable</DebugType>
-    <!--
+		<RepositoryUrl>https://github.com/evotecit/LocalSecurityEditor</RepositoryUrl>
+		<DebugType>portable</DebugType>
+		<!--
       Turns off reference assembly generation
       See: https://docs.microsoft.com/en-us/dotnet/standard/assembly/reference-assemblies
     -->
-    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+		<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
 
-    <PackageReadmeFile>README.MD</PackageReadmeFile>
-    <RepositoryType>git</RepositoryType>
-    <SignAssembly>False</SignAssembly>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
-  </PropertyGroup>
+		<PackageReadmeFile>README.MD</PackageReadmeFile>
+		<RepositoryType>git</RepositoryType>
+		<SignAssembly>False</SignAssembly>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0|AnyCPU'">
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0|AnyCPU'">
+		<WarningLevel>4</WarningLevel>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net6.0|AnyCPU'">
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net6.0|AnyCPU'">
+		<WarningLevel>4</WarningLevel>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\Assets\README.MD">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\Assets\README.MD">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="System.Security.Principal.Windows">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+		<PackageReference Include="System.Security.Principal.Windows">
+			<Version>5.0.0</Version>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-    <PackageReference Include="System.Security.Principal.Windows">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+		<PackageReference Include="System.Security.Principal.Windows">
+			<Version>5.0.0</Version>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
-    <PackageReference Include="System.Security.Principal.Windows">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net46'">
+		<PackageReference Include="System.Security.Principal.Windows">
+			<Version>5.0.0</Version>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
-    <PackageReference Include="System.Security.Principal.Windows">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+		<PackageReference Include="System.Security.Principal.Windows">
+			<Version>5.0.0</Version>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
-    <PackageReference Include="System.Security.Principal.Windows">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+		<PackageReference Include="System.Security.Principal.Windows">
+			<Version>5.0.0</Version>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-    <PackageReference Include="System.Security.Principal.Windows">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+		<PackageReference Include="System.Security.Principal.Windows">
+			<Version>5.0.0</Version>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-    <PackageReference Include="System.Security.Principal.Windows">
-      <Version>5.0.0</Version>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="System.Security.Principal.Windows">
+			<Version>5.0.0</Version>
+		</PackageReference>
+	</ItemGroup>
 
 </Project>
