--- a/LocalSecurityEditor/LocalSecurityEditor.csproj
+++ b/LocalSecurityEditor/LocalSecurityEditor.csproj
@@ -29,10 +29,11 @@
 		<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
 
 		<PackageReadmeFile>README.MD</PackageReadmeFile>
-		<RepositoryType>git</RepositoryType>
-		<SignAssembly>False</SignAssembly>
-		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-	</PropertyGroup>
+                <RepositoryType>git</RepositoryType>
+                <SignAssembly>False</SignAssembly>
+                <GenerateDocumentationFile>True</GenerateDocumentationFile>
+                <LangVersion>latest</LangVersion>
+        </PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0|AnyCPU'">
 		<WarningLevel>4</WarningLevel>
