feat(LsaWrapper, UserRights): ✨ enhance documentation and improve platform targeting
* Updated `TargetFrameworks` to include Windows-specific TFMs to avoid platform analyzer warnings.
* Added XML documentation comments for better clarity on methods and classes in `LsaWrapper`, `UserRights`, and related classes.
* Improved the `SidNameUse` enum with descriptive summaries for each value.
* Enhanced `UserRightState` and `UserRightDefinition` classes with detailed summaries for properties and methods.

--- a/LocalSecurityEditor/LocalSecurityEditor.csproj
+++ b/LocalSecurityEditor/LocalSecurityEditor.csproj
@@ -6,7 +6,12 @@
 		<AssemblyTitle>LocalSecurityEditor</AssemblyTitle>
 		<VersionPrefix>0.3.0</VersionPrefix>
 
-		<TargetFrameworks>netstandard2.0;netstandard2.1;net452;net46;net472;net48;net6.0;net7.0;net8.0</TargetFrameworks>
+		<!--
+		  This library is Windows-only by design. Target modern TFMs with
+		  explicit Windows qualifiers to avoid platform analyzer warnings (CA1416)
+		  while retaining .NET Standard and classic .NET Framework targets.
+		-->
+		<TargetFrameworks>netstandard2.0;netstandard2.1;net452;net46;net472;net48;net6.0-windows;net7.0-windows;net8.0-windows</TargetFrameworks>
 
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Company>Evotec</Company>
@@ -15,7 +20,8 @@
 		<PackageId>LocalSecurityEditor</PackageId>
 		<PackageTags>net45;net46;net472;net48;net50;netstandard;netstandard2.0,netstandard2.1</PackageTags>
 		<PackageProjectUrl>https://github.com/evotecit/LocalSecurityEditor</PackageProjectUrl>
-		<PackageLicenseUrl>https://github.com/evotecit/LocalSecurityEditor/blob/master/License.md</PackageLicenseUrl>
+		<!-- Use PackageLicenseExpression to avoid NU5125 deprecation warning -->
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<DelaySign>False</DelaySign>
 		<IsPublishable>True</IsPublishable>
 		<Copyright>(c) 2011 - 2022 Przemyslaw Klys @ Evotec. All rights reserved.</Copyright>
