--- a/LocalSecurityEditor.Examples/LocalSecurityEditor.Examples.csproj
+++ b/LocalSecurityEditor.Examples/LocalSecurityEditor.Examples.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFrameworks>net472;net8.0-windows;net9.0-windows</TargetFrameworks>
 	</PropertyGroup>
 
 	<ItemGroup>
