--- a/LocalSecurityEditor.Examples/LocalSecurityEditor.Examples.csproj
+++ b/LocalSecurityEditor.Examples/LocalSecurityEditor.Examples.csproj
@@ -1,9 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFrameworks>net472;net8.0-windows;net9.0-windows</TargetFrameworks>
-	</PropertyGroup>
+		<PropertyGroup>
+			<OutputType>Exe</OutputType>
+			<TargetFrameworks>net472;net8.0-windows;net9.0-windows</TargetFrameworks>
+		</PropertyGroup>
+
+		<!-- Ensure restore produces runtime-specific assets for CI invoking win-x86 -->
+		<PropertyGroup Condition="'$(TargetFramework)' == 'net472'">
+			<RuntimeIdentifiers>win-x86;win-x64</RuntimeIdentifiers>
+		</PropertyGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\LocalSecurityEditor\LocalSecurityEditor.csproj" />
