--- a/LocalSecurityEditor.Tests/LocalSecurityEditor.Tests.csproj
+++ b/LocalSecurityEditor.Tests/LocalSecurityEditor.Tests.csproj
@@ -8,11 +8,17 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <!-- Ensure restore produces runtime-specific assets for CI invoking win-x86 on net472 -->
+  <PropertyGroup Condition="'$(TargetFramework)' == 'net472'">
+    <RuntimeIdentifiers>win-x86;win-x64</RuntimeIdentifiers>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+    <PackageReference Include="xunit.analyzers" Version="1.16.0" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
