refactor(LsaWrapper): 🔧 improve SID cache management
* Introduced a constant `MAX_SID_CACHE` to limit the size of the SID cache.
* Implemented cache clearing when the maximum size is exceeded to prevent unbounded growth.

refactor(PrincipalInfo): 🔧 optimize lazy loading of `SecurityIdentifier`

* Changed the `Sid` property to use lazy initialization for `_sid` to improve performance.

refactor(UserRightState): 🔧 simplify `Count` property

* Updated the `Count` property to use expression-bodied member syntax for clarity.

refactor(UserRights): 🔧 enhance SID comparison logic

* Changed `StringComparer.OrdinalIgnoreCase` to `StringComparer.Ordinal` for more precise SID comparisons.
* Added specific exception handling for `IdentityNotMappedException` to improve error reporting.

--- a/LocalSecurityEditor.Tests/LocalSecurityEditor.Tests.csproj
+++ b/LocalSecurityEditor.Tests/LocalSecurityEditor.Tests.csproj
@@ -11,6 +11,7 @@
   <!-- Ensure restore produces runtime-specific assets for CI invoking win-x86 on net472 -->
   <PropertyGroup Condition="'$(TargetFramework)' == 'net472'">
     <RuntimeIdentifiers>win-x86;win-x64</RuntimeIdentifiers>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +20,10 @@
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
     <PackageReference Include="xunit.analyzers" Version="1.16.0" PrivateAssets="all" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
