--- a/LocalSecurityEditor/LocalSecurityEditor.csproj
+++ b/LocalSecurityEditor/LocalSecurityEditor.csproj
@@ -63,6 +63,11 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<!-- Provide .NET Framework reference assemblies on build agents without the dev pack installed -->
+	<ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all" />
+	</ItemGroup>
+
 
 
 </Project>
