--- a/LocalSecurityEditor.Examples/LocalSecurityEditor.Examples.csproj
+++ b/LocalSecurityEditor.Examples/LocalSecurityEditor.Examples.csproj
@@ -8,7 +8,12 @@
 		<!-- Ensure restore produces runtime-specific assets for CI invoking win-x86 -->
 		<PropertyGroup Condition="'$(TargetFramework)' == 'net472'">
 			<RuntimeIdentifiers>win-x86;win-x64</RuntimeIdentifiers>
+			<LangVersion>latest</LangVersion>
 		</PropertyGroup>
+
+		<ItemGroup Condition="'$(TargetFramework)' == 'net472'">
+			<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all" />
+		</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\LocalSecurityEditor\LocalSecurityEditor.csproj" />
